k8s/kafka-rest-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest-proxy-processed-cards
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: kafka-rest-proxy-processed-cards
  template:
    metadata:
      labels:
        app: kafka-rest-proxy-processed-cards
    spec:
      containers:
      - name: proxy
        image: lostpetinitiative/kafka-rest-proxy:0.6
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "228Mi"
            cpu: "500m"
