k8s/kashtanka_data_transfer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-orig-persister
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: transfer-orig-persister
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transfer-orig-persister
    spec:
      containers:
      - name: worker
        image:  lostpetinitiative/processed-cards-persister:2.0.0-dev
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            #cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-detected-head-persister
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: transfer-detected-head-persister
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transfer-detected-head-persister
    spec:
      containers:
      - name: worker
        image:  lostpetinitiative/processed-cards-persister:2.0.0-dev
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            #cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-feature-vector-persister
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: transfer-feature-vector-persister
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transfer-feature-vector-persister
    spec:
      containers:
      - name: worker
        image:  lostpetinitiative/processed-cards-persister:2.0.0-dev
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            #cpu: "200m"
