k8s/kashtanka_transfer_sink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-orig-proxy
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: transfer-orig-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transfer-orig-proxy
    spec:
      containers:
      - name: proxy
        image: lostpetinitiative/kafka-rest-proxy:latest
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-heads
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: transfer-heads
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transfer-heads
    spec:
      containers:
      - name: proxy
        image: lostpetinitiative/kafka-rest-proxy:latest
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-features
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: transfer-features
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transfer-features
    spec:
      containers:
      - name: proxy
        image: lostpetinitiative/kafka-rest-proxy:latest
        imagePullPolicy: Always
