k8s/tf_builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tfbuilder
spec:
  containers:
  - name: tfbuilder
    image: tensorflow/tensorflow:devel
    imagePullPolicy: IfNotPresent
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
  #nodeName: k8s-charlie
