k8s/vk_crawlers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vk-crawler-poterjashkansk
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: vk-crawler-poterjashkansk
  strategy:
    type: Recreate
  #replicas: 0
  template:
    metadata:
      labels:
        app: vk-crawler-poterjashkansk
    spec:
      containers:
      - name: crawler
        image: lostpetinitiative/vk-crawler:1.0.2
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /db
            name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: vk-crawler-poterjashkansk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vk-crawler-club46290079
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: vk-crawler-club46290079
  strategy:
    type: Recreate
  #replicas: 0
  template:
    metadata:
      labels:
        app: vk-crawler-club46290079
    spec:
      containers:
      - name: crawler
        image: lostpetinitiative/vk-crawler:1.0.2
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /db
            name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: vk-crawler-club46290079
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vk-crawler-poteryashki-nn
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: vk-crawler-poteryashki-nn
  strategy:
    type: Recreate
  #replicas: 0
  template:
    metadata:
      labels:
        app: vk-crawler-poteryashki-nn
    spec:
      containers:
      - name: crawler
        image: lostpetinitiative/vk-crawler:1.0.2
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /db
            name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: vk-crawler-poteryashki-nn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vk-crawler-findcatsha
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: vk-crawler-findcatsha
  strategy:
    type: Recreate
  #replicas: 0
  template:
    metadata:
      labels:
        app: vk-crawler-findcatsha
    spec:
      containers:
      - name: crawler
        image: lostpetinitiative/vk-crawler:1.0.2
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /db
            name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: vk-crawler-findcatsha
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vk-crawler-public191189454
  namespace: kashtanka
spec:
  selector:
    matchLabels:
      app: vk-crawler-public191189454
  strategy:
    type: Recreate
  #replicas: 0
  template:
    metadata:
      labels:
        app: vk-crawler-public191189454
    spec:
      containers:
      - name: crawler
        image: lostpetinitiative/vk-crawler:1.0.2
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /db
            name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: vk-crawler-public191189454
