k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster
  labels:
    app: kafka
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - protocol: TCP
      name: plaintext
      port: 9092
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-cluster
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: kafka
    spec:
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       - labelSelector:
      #           matchExpressions:
      #             - key: "app"
      #               operator: In
      #               values:
      #               - zk
      #         topologyKey: "kubernetes.io/hostname"
      containers:
      - name: kafka
        imagePullPolicy: Always
        image: "wurstmeister/kafka:2.13-2.6.0"
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "320Mi"
            cpu: "0.25"
        ports:
        - containerPort: 9092
          name: plaintext                        
        volumeMounts:
        - name: datadir
          mountPath: /kafka      
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
  - port: 80
    targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop      
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "96Mi"
            cpu: "200m"        
        ports:
        - containerPort: 9000
