k8s/solr.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr
  labels:
    app: solr
spec:
  selector:
    app: solr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8983
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr
spec:
  selector:
    matchLabels:
      app: solr
  serviceName: solr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: solr
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - solr
              topologyKey: "topology.kubernetes.io/zone"
      containers:
      - name: solr
        imagePullPolicy: Always
        image: "solr:9"
        resources:
          requests:
            #memory: 1280Mi
            #cpu: "250m"
            memory: 1600Mi
            cpu: "1000m"
          limits:
            memory: 1600Mi
            cpu: "1000m"
        ports:
        - containerPort: 8983
        volumeMounts:
        - name: datadir
          mountPath: /var/solr      
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
