k8s/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: demo-access-auth
  namespace: kashtanka
spec:
  basicAuth:
    secret: demo-access-creds
    namespace: kashtanka
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefixes
  namespace: kashtanka
spec:
  stripPrefix:
    prefixes:
      - /api/storage
      - /api/search
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: development-cors
  namespace: kashtanka
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "POST"
    accessControlAllowOriginList:
      - "http://localhost:3000"
    accessControlAllowHeaders:
      - "Content-Type"
    accessControlMaxAge: 100
    #addVaryHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: kashtanka
spec:
  entryPoints:
    - websecure
  routes:
  # storage rest api
  - match: (Host(`kashtanka.pet`) || Host(`beta.kashtanka.pet`)) && PathPrefix(`/api/storage`) && Method(`GET`)
    kind: Rule
    middlewares:
    #- name: demo-access-auth
    - name: strip-api-prefixes
    - name: development-cors
    services:
    - name: cassandra-rest-api
      port: 80
  # solr gateway rest api
  - match: (Host(`kashtanka.pet`) || Host(`beta.kashtanka.pet`)) && PathPrefix(`/api/search`) && Method(`GET`,`POST`,`OPTIONS`)
    kind: Rule
    middlewares:
    #- name:  demo-access-auth
    - name: strip-api-prefixes
    - name: development-cors
    services:
    - name: search-gateway
      port: 80
  # beta web app
  - match: Host(`beta.kashtanka.pet`)
    kind: Rule
    middlewares:
    #- name: demo-access-auth
    services:
    - name: beta-web-app
      namespace: kashtanka
      port: 80
  # main web app
  - match: Host(`kashtanka.pet`)
    kind: Rule
    middlewares:
    #- name: demo-access-auth
    services:
    - name: web-app
      namespace: kashtanka
      port: 80
  tls:
    certResolver: letsencrypt
